# seismic-rna

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTALL.md  README.md  SCHEDULE.md  USER-MANUAL.md  VENV.md  condarc.yml  defer_np_pd.py  docs-requirements.txt  env.yml  environment.yml  logo.py  logo_test.py  make_conda_recipe.py  meson.build  meta.yml  pyproject.toml  requirements.txt  seismic_cli_test.sh  test.sh
.github/workflows/: build-deploy-docs.yml  build-publish.yml  build-wheels.yml  docs.yml  install-test.yml  test-src.yml
conda/: make_meta_yaml.py  meta.yaml
doc/dev/src/: _build.sh  _clean.sh
doc/user/: Makefile  make.sh
doc/user/src/: cli.rst  conf.py  index.rst
docs/: .buildinfo  cli.html  genindex.html  index.html  install.html  issues.html  objects.inv  py-modindex.html  search.html  searchindex.js  writeme.html
docs/.doctrees/: cli.doctree  environment.pickle  index.doctree  install.doctree  issues.doctree  writeme.doctree
docs/.doctrees/about/: authors.doctree  cite.doctree  dms.doctree  dreem.doctree  index.doctree  license.doctree
docs/.doctrees/algos/: compress.doctree  compseq.doctree  index.doctree
docs/.doctrees/api/: seismicrna.align.doctree  seismicrna.align.tests.doctree  seismicrna.cleanfa.doctree  seismicrna.clust.doctree  seismicrna.cluster.doctree  seismicrna.cluster.tests.doctree  seismicrna.core.arg.doctree  seismicrna.core.batch.doctree  seismicrna.core.batch.tests.doctree  seismicrna.core.doctree  seismicrna.core.extern.doctree  seismicrna.core.extern.tests.doctree  seismicrna.core.io.doctree  seismicrna.core.io.tests.doctree  seismicrna.core.meta.doctree  seismicrna.core.mu.doctree  seismicrna.core.mu.tests.doctree  seismicrna.core.mu.unbias.doctree  seismicrna.core.mu.unbias.tests.doctree  seismicrna.core.ngs.doctree  seismicrna.core.ngs.tests.doctree  seismicrna.core.parallel.doctree  seismicrna.core.parallel.tests.doctree  seismicrna.core.rel.doctree  seismicrna.core.rel.tests.doctree  seismicrna.core.rna.doctree  seismicrna.core.rna.tests.doctree  seismicrna.core.seq.doctree  seismicrna.core.seq.tests.doctree  seismicrna.core.tests.doctree  seismicrna.demult.doctree  seismicrna.doctree  seismicrna.export.doctree  seismicrna.faclean.doctree  seismicrna.fastaclean.doctree  seismicrna.fastc.doctree  seismicrna.fold.doctree  seismicrna.graph.doctree  seismicrna.join.doctree  seismicrna.joinbase.doctree  (+19 more)
docs/.doctrees/data/: index.doctree  relate.doctree
docs/.doctrees/formats/: index.doctree  info.doctree  meta.doctree  reports.doctree
docs/.doctrees/howto/: addclust.doctree  adjclust.doctree  cleanfa.doctree  index.doctree  inputs.doctree  lists.doctree  logging.doctree  normalize.doctree  parallel.doctree  runwf.doctree  (+2 more)
docs/_sources/: cli.rst.txt  index.rst.txt  install.rst.txt  writeme.rst.txt
docs/about/: authors.html  cite.html  dms.html  dreem.html  index.html  license.html
docs/algos/: compress.html  compseq.html  index.html
docs/api/: seismicrna.align.html  seismicrna.align.tests.html  seismicrna.cleanfa.html  seismicrna.clust.html  seismicrna.cluster.html  seismicrna.cluster.tests.html  seismicrna.core.arg.html  seismicrna.core.batch.html  seismicrna.core.batch.tests.html  seismicrna.core.extern.html  seismicrna.core.extern.tests.html  seismicrna.core.html  seismicrna.core.io.html  seismicrna.core.io.tests.html  seismicrna.core.meta.html  seismicrna.core.mu.html  seismicrna.core.mu.tests.html  seismicrna.core.mu.unbias.html  seismicrna.core.mu.unbias.tests.html  seismicrna.core.ngs.html  seismicrna.core.ngs.tests.html  seismicrna.core.parallel.html  seismicrna.core.parallel.tests.html  seismicrna.core.rel.html  seismicrna.core.rel.tests.html  seismicrna.core.rna.html  seismicrna.core.rna.tests.html  seismicrna.core.seq.html  seismicrna.core.seq.tests.html  seismicrna.core.tests.html  seismicrna.demult.html  seismicrna.export.html  seismicrna.faclean.html  seismicrna.fastaclean.html  seismicrna.fastc.html  seismicrna.fold.html  seismicrna.graph.html  seismicrna.html  seismicrna.join.html  seismicrna.joinbase.html  (+19 more)
docs/data/: index.html  relate.html
docs/formats/: index.html  info.html  meta.html  reports.html
docs/howto/: addclust.html  adjclust.html  cleanfa.html  index.html  inputs.html  lists.html  logging.html  normalize.html  parallel.html  runwf.html  sections.html  workflow.html
docs/install/: conda.html  index.html  prereqs.html  venv.html
docs/manuals/: cleanfa.html  faclean.html  index.html  inputs.html  logging.html  parallel.html  sections.html  workflow.html
docs/source/: conf.py
docs/steps/: amplicon.html  example.html  index.html
docs/tutorials/: amplicon.html  example.html  index.html
docs/user/: make.bat  make.sh
docs/whatdoes/: index.html
example/: sars2.fa
logo/: draw_favicon.py  logo.py
meta/: license.py
src/docs/: cli.rst  conf.py  index.rst  make.sh
src/seismicrna/: __init__.py  browser.py  ensembles.py  interface.py  join.py  lists.py  logo.py  main.py  meta.py  migrate.py  pool.py  table.py  urls.py  wf.py
src/userdocs/: cli.rst  conf.py  index.rst  install.rst  issues.rst  make.sh
test_sim/refs/: test_refs.fa
(+1254 files in other folders)
