[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-rna"
authors = [
    {name="Matty Allan"},
    {name="Yves Martin"},
    {name="Scott Grote"},
    {name="Alberic de Lajarte"},
    {name="Justin Aruda"},
]
description = "Structure Ensemble Inference by Sequencing, Mutation Identification, and Clustering of RNA (SEISMIC-RNA)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "brotli >=1.0",
    "click >=8.1",
    "cutadapt >=4.8",
    "fastqsplitter >=1.2",
    "kaleido >=0.2.1",
    "matplotlib >=3.9",
    "numpy >=1.26,<1.27",
    "numba >=0.60",
    "pandas >=2.2",
    "plotly >=5.23",
    "pyyaml >=6.0",
    "scipy >=1.13",
]
dynamic = ["version"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seismicrna"]

[tool.hatch.version]
path = "src/seismicrna/core/version.py"

[project.scripts]
seismic = "seismicrna.main:cli"

[project.urls]
"Homepage" = "https://github.com/rouskinlab/seismic-rna"
"Bug Tracker" = "https://github.com/rouskinlab/seismic-rna/issues"
