[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.15.0"]

[project]
name = "seismic-rna"
authors = [
    {name="Matty Allan"},
    {name="Scott Grote"},
    {name="Justin Aruda"},
    {name="Yves Martin"},
    {name="Alberic de Lajarte"},
]
description = "Structure Ensemble Inference by Sequencing, Mutation Identification, and Clustering of RNA (SEISMIC-RNA)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "brotli >=1.0",
    "click >=8.1",
    "fastqsplitter >=1.2",
    "kaleido ==0.2.1",
    "networkx >=3.4",
    "numpy >=2.0,<2.2",
    "numba >=0.61",
    "pandas >=2.2,<3.0",
    "plotly >=5.23",
    "pyyaml >=6.0",
    "scipy >=1.13",
    "jinja2 >=3.0",
    "jgo >=1.0",
    "matplotlib >=3.0",
    "viennarna>=2.6",
    "pyahocorasick >=2.2.0",
]
dynamic = ["version"]

[project.scripts]
seismic = "seismicrna.main:cli"

[project.urls]
"Homepage" = "https://github.com/rouskinlab/seismic-rna"
"Bug Tracker" = "https://github.com/rouskinlab/seismic-rna/issues"

[tool.mesonpy]
build-dir = "build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = [
    "__init__.py:F401",
    "path_test.py:F403,F405",
]
